--- a/wiInfraredDistanceInterruptHandler.yml
+++ b/wiInfraredDistanceInterruptHandler.yml
@@ -1,8 +1,8 @@
 apps:
   - script : grovepi_iotcs.js
-    name   : 'hackathonwrapper'
-    cwd    : '/home/pi/hackathonwrapper'
+    name   : 'wiInfraredDistanceInterruptHandler'
+    cwd    : '/home/pi/node/wiInfraredDistanceInterruptHandler'
     watch  : false
-    args   : '-d device.conf -s https://iotmadrid-usoracletrial03366.iot.us.oraclecloud.com -v'
+    args   : '-d MADRID.conf -s https://129.150.117.187 -v'
     env    :
       NODE_PATH: /usr/lib/node_modules
