--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "command-line-args": "^4.0.3",
     "command-line-usage": "^4.0.0",
     "express": "^4.16.3",
+    "grove-lcd-rgb": "^0.1.0",
     "lodash": "^4.17.10",
     "node-grovepi": "^2.1.1",
     "npmlog-ts": "0.0.1",
