--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "command-line-usage": "^4.0.0",
     "express": "^4.16.3",
     "fs-extra": "^7.0.0",
+    "glob": "^7.1.2",
     "grove-lcd-rgb": "^0.1.0",
     "lodash": "^4.17.10",
     "node-grovepi": "^2.1.1",
